--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -1,6 +1,63 @@
 <div id="gameCharts" class="border2 ui-component" style="position: absolute; top: 0; left: 0;">
     <div id="gameChartWindow" class="ui-element border2">
         <h5 id="gameChartTitle" class="center toprounder">Charts</h5>
-        <div id="gameChartContent" class="mCSB_container"></div>
+        <div id="gameChartContent" class="mCSB_container">
+            <div id="gameChartCategoryTabs">
+                <ul>
+                    <li><a href="#gameChartPlayerTabs">Player Charts</a></li>
+                    <li><a href="#gameChartStatsTabs">Game Stats</a></li>
+                </ul>
+
+                <div id="gameChartPlayerTabs">
+                    <ul>
+                        <li><a href="#chartBattleXP">Battle XP</a></li>
+                        <li><a href="#chartHarvestXP">Harvest XP</a></li>
+                        <li><a href="#chartCraftingXP">Crafting XP</a></li>
+                        <li><a href="#chartGold">Gold</a></li>
+                        <li><a href="#chartPlatinum">Platinum</a></li>
+                        <li><a href="#chartCrystals">Crystals</a></li>
+                        <li><a href="#chartFood">Food</a></li>
+                        <li><a href="#chartWood">Wood</a></li>
+                        <li><a href="#chartIron">Iron</a></li>
+                        <li><a href="#chartStone">Stone</a></li>
+                    </ul>
+                    <div id="chartBattleXP"></div>
+                    <div id="chartHarvestXP"></div>
+                    <div id="chartCraftingXP"></div>
+                    <div id="chartGold"></div>
+                    <div id="chartPlatinum"></div>
+                    <div id="chartCrystals"></div>
+                    <div id="chartFood"></div>
+                    <div id="chartWood"></div>
+                    <div id="chartIron"></div>
+                    <div id="chartStone"></div>
+                </div>
+
+                <div id="gameChartStatsTabs">
+                    <ul>
+                        <li><a href="#chartMonsterSlain">Monsters Slain</a></li>
+                        <li><a href="#chartGoldLooted">Gold Looted</a></li>
+                        <li><a href="#chartGoldInGame">Gold in Game</a></li>
+                        <li><a href="#chartResourcesInGame">Resources in Game</a></li>
+                        <li><a href="#chartPlatinumInGame">Platinum in Game</a></li>
+                        <li><a href="#chartCraftingMatsInGame">Crafting Materials in Game</a></li>
+                        <li><a href="#chartGemFragmentsInGame">Gem Fragments in Game</a></li>
+                        <li><a href="#chartHarvests">Harvests</a></li>
+                        <li><a href="#chartResourcesHarvested">Resources Harvested</a></li>
+                        <li><a href="#chartItemsFound">Items Found</a></li>
+                    </ul>
+                    <div id="chartMonsterSlain"></div>
+                    <div id="chartGoldLooted"></div>
+                    <div id="chartGoldInGame"></div>
+                    <div id="chartResourcesInGame"></div>
+                    <div id="chartPlatinumInGame"></div>
+                    <div id="chartCraftingMatsInGame"></div>
+                    <div id="chartGemFragmentsInGame"></div>
+                    <div id="chartHarvests"></div>
+                    <div id="chartResourcesHarvested"></div>
+                    <div id="chartItemsFound"></div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
