--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -16,9 +16,10 @@
                 <ul>
                     <li class="border2 ui-element"><a href="#gameChartPlayerTabs">Player Charts</a></li>
                     <li class="border2 ui-element"><a href="#gameChartStatsTabs">Game Stats</a></li>
+                    <li class="border2 ui-element"><a href="#gameChartMarketTabs">Market</a></li>
                 </ul>
 
-                <div id="gameChartPlayerTabs" class="mCSB_container">
+                <div id="gameChartPlayerTabs" class="mCSB_container chartWindow">
                     <ul>
                         <li class="border2 ui-element"><a href="#chartBattleXP">Battle XP</a></li>
                         <li class="border2 ui-element"><a href="#chartHarvestXP">Harvest XP</a></li>
@@ -31,19 +32,19 @@
                         <li class="border2 ui-element"><a href="#chartIron">Iron</a></li>
                         <li class="border2 ui-element"><a href="#chartStone">Stone</a></li>
                     </ul>
-                    <div id="chartBattleXP" class="mCSB_container"></div>
-                    <div id="chartHarvestXP" class="mCSB_container"></div>
-                    <div id="chartCraftingXP" class="mCSB_container"></div>
-                    <div id="chartGold" class="mCSB_container"></div>
-                    <div id="chartPlatinum" class="mCSB_container"></div>
-                    <div id="chartCrystals" class="mCSB_container"></div>
-                    <div id="chartFood" class="mCSB_container"></div>
-                    <div id="chartWood" class="mCSB_container"></div>
-                    <div id="chartIron" class="mCSB_container"></div>
-                    <div id="chartStone" class="mCSB_container"></div>
+                    <div id="chartBattleXP" class="mCSB_container chartWindow"></div>
+                    <div id="chartHarvestXP" class="mCSB_container chartWindow"></div>
+                    <div id="chartCraftingXP" class="mCSB_container chartWindow"></div>
+                    <div id="chartGold" class="mCSB_container chartWindow"></div>
+                    <div id="chartPlatinum" class="mCSB_container chartWindow"></div>
+                    <div id="chartCrystals" class="mCSB_container chartWindow"></div>
+                    <div id="chartFood" class="mCSB_container chartWindow"></div>
+                    <div id="chartWood" class="mCSB_container chartWindow"></div>
+                    <div id="chartIron" class="mCSB_container chartWindow"></div>
+                    <div id="chartStone" class="mCSB_container chartWindow"></div>
                 </div>
 
-                <div id="gameChartStatsTabs" class="mCSB_container">
+                <div id="gameChartStatsTabs" class="mCSB_container chartWindow">
                     <ul>
                         <li class="border2 ui-element"><a href="#chartMonsterSlain">Monsters Slain</a></li>
                         <li class="border2 ui-element"><a href="#chartGoldLooted">Gold Looted</a></li>
@@ -56,19 +57,19 @@
                         <li class="border2 ui-element"><a href="#chartResourcesHarvested">Resources Harvested</a></li>
                         <li class="border2 ui-element"><a href="#chartItemsFound">Items Found</a></li>
                     </ul>
-                    <div id="chartMonsterSlain" class="mCSB_container"></div>
-                    <div id="chartGoldLooted" class="mCSB_container"></div>
-                    <div id="chartGoldInGame" class="mCSB_container"></div>
-                    <div id="chartResourcesInGame" class="mCSB_container"></div>
-                    <div id="chartPlatinumInGame" class="mCSB_container"></div>
-                    <div id="chartCraftingMatsInGame" class="mCSB_container"></div>
-                    <div id="chartGemFragmentsInGame" class="mCSB_container"></div>
-                    <div id="chartHarvests" class="mCSB_container"></div>
-                    <div id="chartResourcesHarvested" class="mCSB_container"></div>
-                    <div id="chartItemsFound" class="mCSB_container"></div>
+                    <div id="chartMonsterSlain" class="mCSB_container chartWindow"></div>
+                    <div id="chartGoldLooted" class="mCSB_container chartWindow"></div>
+                    <div id="chartGoldInGame" class="mCSB_container chartWindow"></div>
+                    <div id="chartResourcesInGame" class="mCSB_container chartWindow"></div>
+                    <div id="chartPlatinumInGame" class="mCSB_container chartWindow"></div>
+                    <div id="chartCraftingMatsInGame" class="mCSB_container chartWindow"></div>
+                    <div id="chartGemFragmentsInGame" class="mCSB_container chartWindow"></div>
+                    <div id="chartHarvests" class="mCSB_container chartWindow"></div>
+                    <div id="chartResourcesHarvested" class="mCSB_container chartWindow"></div>
+                    <div id="chartItemsFound" class="mCSB_container chartWindow"></div>
                 </div>
 
-                <div id="gameChartMarketTabs" class="mCSB_container">
+                <div id="gameChartMarketTabs" class="mCSB_container chartWindow">
                     <ul>
                         <li class="border2 ui-element"><a href="#chartMarketCrystals">Crystals</a></li>
                         <li class="border2 ui-element"><a href="#chartMarketPlatinum">Platinum</a></li>
@@ -79,14 +80,14 @@
                         <li class="border2 ui-element"><a href="#chartMarketCraftingMats">Crafting Materials</a></li>
                         <li class="border2 ui-element"><a href="#chartMarketGemFragments">Gem Fragments</a></li>
                     </ul>
-                    <div id="chartMarketCrystals" class="mCSB_container"></div>
-                    <div id="chartMarketPlatinum" class="mCSB_container"></div>
-                    <div id="chartMarketFood" class="mCSB_container"></div>
-                    <div id="chartMarketWood" class="mCSB_container"></div>
-                    <div id="chartMarketIron" class="mCSB_container"></div>
-                    <div id="chartMarketStone" class="mCSB_container"></div>
-                    <div id="chartMarketCraftingMats" class="mCSB_container"></div>
-                    <div id="chartMarketGemFragments" class="mCSB_container"></div>
+                    <div id="chartMarketCrystals" class="mCSB_container chartWindow"></div>
+                    <div id="chartMarketPlatinum" class="mCSB_container chartWindow"></div>
+                    <div id="chartMarketFood" class="mCSB_container chartWindow"></div>
+                    <div id="chartMarketWood" class="mCSB_container chartWindow"></div>
+                    <div id="chartMarketIron" class="mCSB_container chartWindow"></div>
+                    <div id="chartMarketStone" class="mCSB_container chartWindow"></div>
+                    <div id="chartMarketCraftingMats" class="mCSB_container chartWindow"></div>
+                    <div id="chartMarketGemFragments" class="mCSB_container chartWindow"></div>
                 </div>
             </div>
         </div>
