chart template update

--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -3,13 +3,15 @@
         <h5 id="gameChartTitle" class="center toprounder">Charts</h5>
         <div id="gameChartContent" class="mCSB_container">
             <div id="gameChartControls" class="col-xs-12 col-md-12 center mt10" style="display: block">
-                <div id="gameChartReset" class="btn btn-primary"/>
-                <div id="gameChartTimeHour" class="btn btn-primary"/>
-                <div id="gameChartTimeDay" class="btn btn-primary"/>
-                <div id="gameChartTimeWeek" class="btn btn-primary"/>
-                <div id="gameChartTimeMonth" class="btn btn-primary"/>
-                <div id="gameChartStorageSizeWrapper">
-                    <span id="gameChartStorageSize"></span>
+                <div id="gameChartReset" class="btn btn-primary">Reset</div>
+                <div id="gameChartTimeHour" class="btn btn-primary">Hour</div>
+                <div id="gameChartTimeDay" class="btn btn-primary">Day</div>
+                <div id="gameChartTimeWeek" class="btn btn-primary">Week</div>
+                <div id="gameChartTimeMonth" class="btn btn-primary">Month</div>
+                <div id="gameChartStorageSizeWrapper" style="display: inline-block">
+                    <span>Storage Size: </span>
+                    <span id="gameChartStorageSize">0</span>
+                    <span>kb</span>
                 </div>
             </div>
             <div id="gameChartCategoryTabs">
