--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -15,25 +15,25 @@
                 </div>
             </div>
             <div id="gameChartCategoryTabs">
-                <ul>
-                    <li class="border2 ui-element"><a href="#gameChartPlayerTabs">Player Charts</a></li>
-                    <li class="border2 ui-element"><a href="#gameChartStatsTabs">Game Stats</a></li>
-                    <li class="border2 ui-element"><a href="#gameChartMarketTabs">Market</a></li>
-                </ul>
+                <div class="col-xs-12 col-md-12 mt10" style="display: block">
+                    <div id="toggleGameChartPlayer" class="btn btn-primary">Player Charts</div>
+                    <div id="toggleGameChartStats" class="btn btn-primary">Game Stats</div>
+                    <div id="toggleGameChartMarket" class="btn btn-primary">Market</div>
+                </div>
 
                 <div id="gameChartPlayerTabs" class="mCSB_container chartWindow">
-                    <ul>
-                        <li class="border2 ui-element"><a href="#chartBattleXP">Battle XP</a></li>
-                        <li class="border2 ui-element"><a href="#chartHarvestXP">Harvest XP</a></li>
-                        <li class="border2 ui-element"><a href="#chartCraftingXP">Crafting XP</a></li>
-                        <li class="border2 ui-element"><a href="#chartGold">Gold</a></li>
-                        <li class="border2 ui-element"><a href="#chartPlatinum">Platinum</a></li>
-                        <li class="border2 ui-element"><a href="#chartCrystals">Crystals</a></li>
-                        <li class="border2 ui-element"><a href="#chartFood">Food</a></li>
-                        <li class="border2 ui-element"><a href="#chartWood">Wood</a></li>
-                        <li class="border2 ui-element"><a href="#chartIron">Iron</a></li>
-                        <li class="border2 ui-element"><a href="#chartStone">Stone</a></li>
-                    </ul>
+                    <div class="col-xs-12 col-md-12 mt10" style="display: block">
+                        <div id="toggleChartBattleXP" class="btn btn-primary">Battle XP</div>
+                        <div id="toggleChartHarvestXP" class="btn btn-primary">Harvest XP</div>
+                        <div id="toggleChartCraftingXP" class="btn btn-primary">Crafting XP</div>
+                        <div id="toggleChartGold" class="btn btn-primary">Gold</div>
+                        <div id="toggleChartPlatinum" class="btn btn-primary">Platinum</div>
+                        <div id="toggleChartCrystals" class="btn btn-primary">Crystals</div>
+                        <div id="toggleChartFood" class="btn btn-primary">Food</div>
+                        <div id="toggleChartWood" class="btn btn-primary">Wood</div>
+                        <div id="toggleChartIron" class="btn btn-primary">Iron</div>
+                        <div id="toggleChartStone" class="btn btn-primary">Stone</div>
+                    </div>
                     <div id="chartBattleXP" class="mCSB_container chartWindow"></div>
                     <div id="chartHarvestXP" class="mCSB_container chartWindow"></div>
                     <div id="chartCraftingXP" class="mCSB_container chartWindow"></div>
@@ -47,18 +47,18 @@
                 </div>
 
                 <div id="gameChartStatsTabs" class="mCSB_container chartWindow">
-                    <ul>
-                        <li class="border2 ui-element"><a href="#chartMonsterSlain">Monsters Slain</a></li>
-                        <li class="border2 ui-element"><a href="#chartGoldLooted">Gold Looted</a></li>
-                        <li class="border2 ui-element"><a href="#chartGoldInGame">Gold in Game</a></li>
-                        <li class="border2 ui-element"><a href="#chartResourcesInGame">Resources in Game</a></li>
-                        <li class="border2 ui-element"><a href="#chartPlatinumInGame">Platinum in Game</a></li>
-                        <li class="border2 ui-element"><a href="#chartCraftingMatsInGame">Crafting Materials in Game</a></li>
-                        <li class="border2 ui-element"><a href="#chartGemFragmentsInGame">Gem Fragments in Game</a></li>
-                        <li class="border2 ui-element"><a href="#chartHarvests">Harvests</a></li>
-                        <li class="border2 ui-element"><a href="#chartResourcesHarvested">Resources Harvested</a></li>
-                        <li class="border2 ui-element"><a href="#chartItemsFound">Items Found</a></li>
-                    </ul>
+                    <div class="col-xs-12 col-md-12 mt10" style="display: block">
+                        <div id="toggleChartMonsterSlain" class="btn btn-primary">Monsters Slain</div>
+                        <div id="toggleChartGoldLooted" class="btn btn-primary">Gold Looted</div>
+                        <div id="toggleChartGoldInGame" class="btn btn-primary">Gold in Game</div>
+                        <div id="toggleChartResourcesInGame" class="btn btn-primary">Resources in Game</div>
+                        <div id="toggleChartPlatinumInGame" class="btn btn-primary">Platinum in Game</div>
+                        <div id="toggleChartCraftingMatsInGame" class="btn btn-primary">Crafting Materials in Game</div>
+                        <div id="toggleChartGemFragmentsInGame" class="btn btn-primary">Gem Fragments in Game</div>
+                        <div id="toggleChartHarvests" class="btn btn-primary">Harvests</div>
+                        <div id="toggleChartResourcesHarvested" class="btn btn-primary">Resources Harvested</div>
+                        <div id="toggleChartItemsFound" class="btn btn-primary">Items Found</div>
+                    </div>
                     <div id="chartMonsterSlain" class="mCSB_container chartWindow"></div>
                     <div id="chartGoldLooted" class="mCSB_container chartWindow"></div>
                     <div id="chartGoldInGame" class="mCSB_container chartWindow"></div>
@@ -72,16 +72,16 @@
                 </div>
 
                 <div id="gameChartMarketTabs" class="mCSB_container chartWindow">
-                    <ul>
-                        <li class="border2 ui-element"><a href="#chartMarketCrystals">Crystals</a></li>
-                        <li class="border2 ui-element"><a href="#chartMarketPlatinum">Platinum</a></li>
-                        <li class="border2 ui-element"><a href="#chartMarketFood">Food</a></li>
-                        <li class="border2 ui-element"><a href="#chartMarketWood">Wood</a></li>
-                        <li class="border2 ui-element"><a href="#chartMarketIron">Iron</a></li>
-                        <li class="border2 ui-element"><a href="#chartMarketStone">Stone</a></li>
-                        <li class="border2 ui-element"><a href="#chartMarketCraftingMats">Crafting Materials</a></li>
-                        <li class="border2 ui-element"><a href="#chartMarketGemFragments">Gem Fragments</a></li>
-                    </ul>
+                    <div class="col-xs-12 col-md-12 mt10" style="display: block">
+                        <div id="toggleChartMarketCrystals" class="btn btn-primary">Crystals</div>
+                        <div id="toggleChartMarketPlatinum" class="btn btn-primary">Platinum</div>
+                        <div id="toggleChartMarketFood" class="btn btn-primary">Food</div>
+                        <div id="toggleChartMarketWood" class="btn btn-primary">Wood</div>
+                        <div id="toggleChartMarketIron" class="btn btn-primary">Iron</div>
+                        <div id="toggleChartMarketStone" class="btn btn-primary">Stone</div>
+                        <div id="toggleChartMarketCraftingMats" class="btn btn-primary">Crafting Materials</div>
+                        <div id="toggleChartMarketGemFragments" class="btn btn-primary">Gem Fragments</div>
+                    </div>
                     <div id="chartMarketCrystals" class="mCSB_container chartWindow"></div>
                     <div id="chartMarketPlatinum" class="mCSB_container chartWindow"></div>
                     <div id="chartMarketFood" class="mCSB_container chartWindow"></div>
