chart style update

--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -21,7 +21,7 @@
                     <div id="toggleGameChartMarket" class="btn btn-primary">Market</div>
                 </div>
 
-                <div id="gameChartPlayerTabs" class="mCSB_container chartWindow">
+                <div id="gameChartPlayerTabs" class="chartWindow">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
                         <div id="toggleChartBattleXP" class="btn btn-primary">Battle XP</div>
                         <div id="toggleChartHarvestXP" class="btn btn-primary">Harvest XP</div>
@@ -34,19 +34,19 @@
                         <div id="toggleChartIron" class="btn btn-primary">Iron</div>
                         <div id="toggleChartStone" class="btn btn-primary">Stone</div>
                     </div>
-                    <div id="chartBattleXP" class="mCSB_container chartWindow"></div>
-                    <div id="chartHarvestXP" class="mCSB_container chartWindow"></div>
-                    <div id="chartCraftingXP" class="mCSB_container chartWindow"></div>
-                    <div id="chartGold" class="mCSB_container chartWindow"></div>
-                    <div id="chartPlatinum" class="mCSB_container chartWindow"></div>
-                    <div id="chartCrystals" class="mCSB_container chartWindow"></div>
-                    <div id="chartFood" class="mCSB_container chartWindow"></div>
-                    <div id="chartWood" class="mCSB_container chartWindow"></div>
-                    <div id="chartIron" class="mCSB_container chartWindow"></div>
-                    <div id="chartStone" class="mCSB_container chartWindow"></div>
+                    <div id="chartBattleXP" class="chartWindow"></div>
+                    <div id="chartHarvestXP" class="chartWindow"></div>
+                    <div id="chartCraftingXP" class="chartWindow"></div>
+                    <div id="chartGold" class="chartWindow"></div>
+                    <div id="chartPlatinum" class="chartWindow"></div>
+                    <div id="chartCrystals" class="chartWindow"></div>
+                    <div id="chartFood" class="chartWindow"></div>
+                    <div id="chartWood" class="chartWindow"></div>
+                    <div id="chartIron" class="chartWindow"></div>
+                    <div id="chartStone" class="chartWindow"></div>
                 </div>
 
-                <div id="gameChartStatsTabs" class="mCSB_container chartWindow">
+                <div id="gameChartStatsTabs" class="chartWindow">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
                         <div id="toggleChartMonsterSlain" class="btn btn-primary">Monsters Slain</div>
                         <div id="toggleChartGoldLooted" class="btn btn-primary">Gold Looted</div>
@@ -59,19 +59,19 @@
                         <div id="toggleChartResourcesHarvested" class="btn btn-primary">Resources Harvested</div>
                         <div id="toggleChartItemsFound" class="btn btn-primary">Items Found</div>
                     </div>
-                    <div id="chartMonsterSlain" class="mCSB_container chartWindow"></div>
-                    <div id="chartGoldLooted" class="mCSB_container chartWindow"></div>
-                    <div id="chartGoldInGame" class="mCSB_container chartWindow"></div>
-                    <div id="chartResourcesInGame" class="mCSB_container chartWindow"></div>
-                    <div id="chartPlatinumInGame" class="mCSB_container chartWindow"></div>
-                    <div id="chartCraftingMatsInGame" class="mCSB_container chartWindow"></div>
-                    <div id="chartGemFragmentsInGame" class="mCSB_container chartWindow"></div>
-                    <div id="chartHarvests" class="mCSB_container chartWindow"></div>
-                    <div id="chartResourcesHarvested" class="mCSB_container chartWindow"></div>
-                    <div id="chartItemsFound" class="mCSB_container chartWindow"></div>
+                    <div id="chartMonsterSlain" class="chartWindow"></div>
+                    <div id="chartGoldLooted" class="chartWindow"></div>
+                    <div id="chartGoldInGame" class="chartWindow"></div>
+                    <div id="chartResourcesInGame" class="chartWindow"></div>
+                    <div id="chartPlatinumInGame" class="chartWindow"></div>
+                    <div id="chartCraftingMatsInGame" class="chartWindow"></div>
+                    <div id="chartGemFragmentsInGame" class="chartWindow"></div>
+                    <div id="chartHarvests" class="chartWindow"></div>
+                    <div id="chartResourcesHarvested" class="chartWindow"></div>
+                    <div id="chartItemsFound" class="chartWindow"></div>
                 </div>
 
-                <div id="gameChartMarketTabs" class="mCSB_container chartWindow">
+                <div id="gameChartMarketTabs" class="chartWindow">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
                         <div id="toggleChartMarketCrystals" class="btn btn-primary">Crystals</div>
                         <div id="toggleChartMarketPlatinum" class="btn btn-primary">Platinum</div>
@@ -82,14 +82,14 @@
                         <div id="toggleChartMarketCraftingMats" class="btn btn-primary">Crafting Materials</div>
                         <div id="toggleChartMarketGemFragments" class="btn btn-primary">Gem Fragments</div>
                     </div>
-                    <div id="chartMarketCrystals" class="mCSB_container chartWindow"></div>
-                    <div id="chartMarketPlatinum" class="mCSB_container chartWindow"></div>
-                    <div id="chartMarketFood" class="mCSB_container chartWindow"></div>
-                    <div id="chartMarketWood" class="mCSB_container chartWindow"></div>
-                    <div id="chartMarketIron" class="mCSB_container chartWindow"></div>
-                    <div id="chartMarketStone" class="mCSB_container chartWindow"></div>
-                    <div id="chartMarketCraftingMats" class="mCSB_container chartWindow"></div>
-                    <div id="chartMarketGemFragments" class="mCSB_container chartWindow"></div>
+                    <div id="chartMarketCrystals" class="chartWindow"></div>
+                    <div id="chartMarketPlatinum" class="chartWindow"></div>
+                    <div id="chartMarketFood" class="chartWindow"></div>
+                    <div id="chartMarketWood" class="chartWindow"></div>
+                    <div id="chartMarketIron" class="chartWindow"></div>
+                    <div id="chartMarketStone" class="chartWindow"></div>
+                    <div id="chartMarketCraftingMats" class="chartWindow"></div>
+                    <div id="chartMarketGemFragments" class="chartWindow"></div>
                 </div>
             </div>
         </div>
