data point hooks for charts

--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -29,6 +29,8 @@
                         <div id="toggleChartGold" class="btn btn-primary">Gold</div>
                         <div id="toggleChartPlatinum" class="btn btn-primary">Platinum</div>
                         <div id="toggleChartCrystals" class="btn btn-primary">Crystals</div>
+                        <div id="toggleChartMaterials" class="btn btn-primary">Material</div>
+                        <div id="toggleChartFragments" class="btn btn-primary">Fragments</div>
                         <div id="toggleChartFood" class="btn btn-primary">Food</div>
                         <div id="toggleChartWood" class="btn btn-primary">Wood</div>
                         <div id="toggleChartIron" class="btn btn-primary">Iron</div>
@@ -40,6 +42,8 @@
                     <div id="chartGold" class="chartWindow"></div>
                     <div id="chartPlatinum" class="chartWindow"></div>
                     <div id="chartCrystals" class="chartWindow"></div>
+                    <div id="chartMaterials" class="chartWindow"></div>
+                    <div id="chartFragments" class="chartWindow"></div>
                     <div id="chartFood" class="chartWindow"></div>
                     <div id="chartWood" class="chartWindow"></div>
                     <div id="chartIron" class="chartWindow"></div>
@@ -53,8 +57,8 @@
                         <div id="toggleChartGoldInGame" class="btn btn-primary">Gold in Game</div>
                         <div id="toggleChartResourcesInGame" class="btn btn-primary">Resources in Game</div>
                         <div id="toggleChartPlatinumInGame" class="btn btn-primary">Platinum in Game</div>
-                        <div id="toggleChartCraftingMatsInGame" class="btn btn-primary">Crafting Materials in Game</div>
-                        <div id="toggleChartGemFragmentsInGame" class="btn btn-primary">Gem Fragments in Game</div>
+                        <div id="toggleChartMaterialInGame" class="btn btn-primary">Material in Game</div>
+                        <div id="toggleChartFragmentInGame" class="btn btn-primary">Fragments in Game</div>
                         <div id="toggleChartHarvests" class="btn btn-primary">Harvests</div>
                         <div id="toggleChartResourcesHarvested" class="btn btn-primary">Resources Harvested</div>
                         <div id="toggleChartItemsFound" class="btn btn-primary">Items Found</div>
@@ -64,8 +68,8 @@
                     <div id="chartGoldInGame" class="chartWindow"></div>
                     <div id="chartResourcesInGame" class="chartWindow"></div>
                     <div id="chartPlatinumInGame" class="chartWindow"></div>
-                    <div id="chartCraftingMatsInGame" class="chartWindow"></div>
-                    <div id="chartGemFragmentsInGame" class="chartWindow"></div>
+                    <div id="chartMaterialInGame" class="chartWindow"></div>
+                    <div id="chartFragmentInGame" class="chartWindow"></div>
                     <div id="chartHarvests" class="chartWindow"></div>
                     <div id="chartResourcesHarvested" class="chartWindow"></div>
                     <div id="chartItemsFound" class="chartWindow"></div>
@@ -79,8 +83,8 @@
                         <div id="toggleChartMarketWood" class="btn btn-primary">Wood</div>
                         <div id="toggleChartMarketIron" class="btn btn-primary">Iron</div>
                         <div id="toggleChartMarketStone" class="btn btn-primary">Stone</div>
-                        <div id="toggleChartMarketCraftingMats" class="btn btn-primary">Crafting Materials</div>
-                        <div id="toggleChartMarketGemFragments" class="btn btn-primary">Gem Fragments</div>
+                        <div id="toggleChartMarketMaterial" class="btn btn-primary">Material</div>
+                        <div id="toggleChartMarketFragment" class="btn btn-primary">Fragments</div>
                     </div>
                     <div id="chartMarketCrystals" class="chartWindow"></div>
                     <div id="chartMarketPlatinum" class="chartWindow"></div>
@@ -88,8 +92,8 @@
                     <div id="chartMarketWood" class="chartWindow"></div>
                     <div id="chartMarketIron" class="chartWindow"></div>
                     <div id="chartMarketStone" class="chartWindow"></div>
-                    <div id="chartMarketCraftingMats" class="chartWindow"></div>
-                    <div id="chartMarketGemFragments" class="chartWindow"></div>
+                    <div id="chartMarketMaterial" class="chartWindow"></div>
+                    <div id="chartMarketFragment" class="chartWindow"></div>
                 </div>
             </div>
         </div>
